Changed to maven project